<resources>
    <string name="app_name">GitLab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">username@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="gitlab_access_token_url">https://gitlab.com/profile/personal_access_tokens</string>

    <!--TODO change google web client id-->
    <string name="google_web_client_id"></string>

    <!--TODO this is a test Admob ID-->
    <string name="admob_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="projects_label">Projects</string>
    <string name="starred_label">Starred</string>
    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>


    <string name="pref_header_themes">Themes</string>
    <string name="pref_title_app_theme">App theme</string>
    <string-array name="pref_themes_list_titles">
        <item>NORMAL</item>
        <item>DARK</item>
    </string-array>

    <string name="text_example_url">Server url (Example: https://gitlab.com/)</string>
    <string name="gitlab_url">https://gitlab.com</string>
    <string name="access_token_label">Personal Access token</string>
    <string name="create_token_label">Create token</string>
    <string name="add_account_label">Add account</string>
    <string name="sync_gitlab_google_label">Sync your GitLab accounts with Google.
        \n\nThis synchronization allows you use this app offline and more.
    </string>
    <string name="sign_out_label">Sign Out</string>
    <string name="google_sync_label">Google Sync</string>
    <string name="add_gitlab_account_text_label">You can use this app if you add a personal access
        token bellow and press the button "Add account".
        \n\nIf you have not a token, press the button "Create token" to be redirected to the Gitlab
        Access Tokens page.
        \n\nWhen you are creating the token, you have to select the scope "api".
    </string>
    <string name="add_gitlab_account">Add GitLab account</string>
    <string name="account_list_label">Account list</string>

    <string name="loading_dots_label">Loading…</string>
    <string name="pref_title_code_view_theme">Code view theme</string>
    <string name="title_activity_code_view">CodeViewActivity</string>
    <string name="search_label">Search</string>
    <string name="private_token_query">\?private_token=</string>
    <string name="no_description_label">No description</string>
    <string name="gitlab_api_error_label">GitLab API error</string>
    <string name="app_theme_restart_app_label">App theme changes will not take effect until you restart the app</string>
    <string name="delete_account_label">Are you sure you want to delete this account?</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="add_account_success_label">Successfully added account</string>
    <string name="add_account_added_label">This account is already added</string>
    <string name="error_try_again_label">There is an error, try again later</string>

</resources>
