<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/navigationViewItemProjects"
            android:icon="@drawable/ic_book_white_24dp"
            android:title="@string/projects_label" />
        <item
            android:id="@+id/navigationViewItemStarred"
            android:icon="@drawable/ic_star_white_24dp"
            android:title="@string/starred_label" />
    </group>

    <group android:id="@+id/group2" android:checkableBehavior="none">
        <item
            android:id="@+id/navigationViewItemGoogleSync"
            android:icon="@drawable/ic_google"
            android:title="@string/google_sync_label" />
    </group>

    <group android:id="@+id/group3" android:checkableBehavior="none">
        <item
            android:id="@+id/navigationViewItemSettings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings_label" />
        <item
            android:id="@+id/navigationViewItemAbout"
            android:icon="@drawable/ic_help_white_24dp"
            android:title="@string/about_label" />
    </group>

</menu>
